{
  "version": 4,
  "terraform_version": "1.1.0",
  "serial": 24,
  "lineage": "9dcdd42a-07f6-17d0-88e1-22538e82100e",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "res-19",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/60a43a8b-348b-4e0f-a5d7-eff5f5f72125/resourceGroups/redis-shake-test-rg/providers/Microsoft.Network/loadBalancers/redis-shake-vms-lb/frontendIPConfigurations/redis-shake-vms-lb-pip",
                "load_balancer_rules": [
                  "/subscriptions/60a43a8b-348b-4e0f-a5d7-eff5f5f72125/resourceGroups/redis-shake-test-rg/providers/Microsoft.Network/loadBalancers/redis-shake-vms-lb/loadBalancingRules/lb-rule01"
                ],
                "name": "redis-shake-vms-lb-pip",
                "private_ip_address": "10.2.0.254",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/60a43a8b-348b-4e0f-a5d7-eff5f5f72125/resourceGroups/redis-shake-test-rg/providers/Microsoft.Network/virtualNetworks/redis-shake-test-rg-vnet/subnets/default",
                "zones": [
                  "1",
                  "2",
                  "3"
                ]
              }
            ],
            "id": "/subscriptions/60a43a8b-348b-4e0f-a5d7-eff5f5f72125/resourceGroups/redis-shake-test-rg/providers/Microsoft.Network/loadBalancers/redis-shake-vms-lb",
            "location": "chinanorth3",
            "name": "redis-shake-vms-lb",
            "private_ip_address": "10.2.0.254",
            "private_ip_addresses": [
              "10.2.0.254"
            ],
            "resource_group_name": "redis-shake-test-rg",
            "sku": "Standard",
            "sku_tier": "Regional",
            "timeouts": {
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "res-20",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/60a43a8b-348b-4e0f-a5d7-eff5f5f72125/resourceGroups/redis-shake-test-rg/providers/Microsoft.Network/loadBalancers/redis-shake-vm-web-lb/frontendIPConfigurations/redis-shake-vm-web-lb-pip",
                "load_balancer_rules": [
                  "/subscriptions/60a43a8b-348b-4e0f-a5d7-eff5f5f72125/resourceGroups/redis-shake-test-rg/providers/Microsoft.Network/loadBalancers/redis-shake-vm-web-lb/loadBalancingRules/lb-rule01"
                ],
                "name": "redis-shake-vm-web-lb-pip",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/60a43a8b-348b-4e0f-a5d7-eff5f5f72125/resourceGroups/redis-shake-test-rg/providers/Microsoft.Network/publicIPAddresses/redis-shake-vm-web-lb-ip"
              }
            ],
            "id": "/subscriptions/60a43a8b-348b-4e0f-a5d7-eff5f5f72125/resourceGroups/redis-shake-test-rg/providers/Microsoft.Network/loadBalancers/redis-shake-vm-web-lb",
            "location": "chinanorth3",
            "name": "redis-shake-vm-web-lb",
            "resource_group_name": "redis-shake-test-rg",
            "sku": "Standard",
            "sku_tier": "Regional",
            "timeouts": {
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "res-12",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configurations": [
              "/subscriptions/60a43a8b-348b-4e0f-a5d7-eff5f5f72125/resourceGroups/redis-shake-test-rg/providers/Microsoft.Network/networkInterfaces/redis-server-with102/ipConfigurations/ipconfig1",
              "/subscriptions/60a43a8b-348b-4e0f-a5d7-eff5f5f72125/resourceGroups/redis-shake-test-rg/providers/Microsoft.Network/networkInterfaces/redisshakevm878/ipConfigurations/ipconfig1"
            ],
            "id": "/subscriptions/60a43a8b-348b-4e0f-a5d7-eff5f5f72125/resourceGroups/redis-shake-test-rg/providers/Microsoft.Network/loadBalancers/redis-shake-vms-lb/backendAddressPools/redis-shake-vms-lb-pool",
            "load_balancing_rules": [
              "/subscriptions/60a43a8b-348b-4e0f-a5d7-eff5f5f72125/resourceGroups/redis-shake-test-rg/providers/Microsoft.Network/loadBalancers/redis-shake-vms-lb/loadBalancingRules/lb-rule01"
            ],
            "loadbalancer_id": "/subscriptions/60a43a8b-348b-4e0f-a5d7-eff5f5f72125/resourceGroups/redis-shake-test-rg/providers/Microsoft.Network/loadBalancers/redis-shake-vms-lb",
            "name": "redis-shake-vms-lb-pool",
            "timeouts": {
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "res-13",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configurations": [
              "/subscriptions/60a43a8b-348b-4e0f-a5d7-eff5f5f72125/resourceGroups/redis-shake-test-rg/providers/Microsoft.Network/networkInterfaces/redis-server-with102/ipConfigurations/ipconfig1",
              "/subscriptions/60a43a8b-348b-4e0f-a5d7-eff5f5f72125/resourceGroups/redis-shake-test-rg/providers/Microsoft.Network/networkInterfaces/redisshakevm878/ipConfigurations/ipconfig1"
            ],
            "id": "/subscriptions/60a43a8b-348b-4e0f-a5d7-eff5f5f72125/resourceGroups/redis-shake-test-rg/providers/Microsoft.Network/loadBalancers/redis-shake-vm-web-lb/backendAddressPools/redis-shake-vm-web-lb-pool",
            "load_balancing_rules": [
              "/subscriptions/60a43a8b-348b-4e0f-a5d7-eff5f5f72125/resourceGroups/redis-shake-test-rg/providers/Microsoft.Network/loadBalancers/redis-shake-vm-web-lb/loadBalancingRules/lb-rule01"
            ],
            "loadbalancer_id": "/subscriptions/60a43a8b-348b-4e0f-a5d7-eff5f5f72125/resourceGroups/redis-shake-test-rg/providers/Microsoft.Network/loadBalancers/redis-shake-vm-web-lb",
            "name": "redis-shake-vm-web-lb-pool",
            "timeouts": {
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "res-21",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": true,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/60a43a8b-348b-4e0f-a5d7-eff5f5f72125/resourceGroups/redis-shake-test-rg/providers/Microsoft.Network/networkInterfaces/redis-server-src-655",
            "internal_domain_name_suffix": "pzakw2ciydhexj3hxivnwz4fzc.zqzx.internal.chinacloudapp.cn",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.2.0.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/60a43a8b-348b-4e0f-a5d7-eff5f5f72125/resourceGroups/redis-shake-test-rg/providers/Microsoft.Network/publicIPAddresses/redis-server-src-vm-ip",
                "subnet_id": "/subscriptions/60a43a8b-348b-4e0f-a5d7-eff5f5f72125/resourceGroups/redis-shake-test-rg/providers/Microsoft.Network/virtualNetworks/redis-shake-test-rg-vnet/subnets/default"
              }
            ],
            "location": "chinanorth3",
            "mac_address": "00-17-FA-06-8D-CC",
            "name": "redis-server-src-655",
            "private_ip_address": "10.2.0.5",
            "private_ip_addresses": [
              "10.2.0.5"
            ],
            "resource_group_name": "redis-shake-test-rg",
            "timeouts": {
            },
            "virtual_machine_id": "/subscriptions/60a43a8b-348b-4e0f-a5d7-eff5f5f72125/resourceGroups/redis-shake-test-rg/providers/Microsoft.Compute/virtualMachines/redis-server-src-vm"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "res-22",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": true,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/60a43a8b-348b-4e0f-a5d7-eff5f5f72125/resourceGroups/redis-shake-test-rg/providers/Microsoft.Network/networkInterfaces/redis-server-with102",
            "internal_domain_name_suffix": "pzakw2ciydhexj3hxivnwz4fzc.zqzx.internal.chinacloudapp.cn",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.2.0.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/60a43a8b-348b-4e0f-a5d7-eff5f5f72125/resourceGroups/redis-shake-test-rg/providers/Microsoft.Network/publicIPAddresses/redis-server-withshake-target02-ip",
                "subnet_id": "/subscriptions/60a43a8b-348b-4e0f-a5d7-eff5f5f72125/resourceGroups/redis-shake-test-rg/providers/Microsoft.Network/virtualNetworks/redis-shake-test-rg-vnet/subnets/default"
              }
            ],
            "location": "chinanorth3",
            "mac_address": "00-17-FA-05-47-EA",
            "name": "redis-server-with102",
            "private_ip_address": "10.2.0.6",
            "private_ip_addresses": [
              "10.2.0.6"
            ],
            "resource_group_name": "redis-shake-test-rg",
            "timeouts": {
            },
            "virtual_machine_id": "/subscriptions/60a43a8b-348b-4e0f-a5d7-eff5f5f72125/resourceGroups/REDIS-SHAKE-TEST-RG/providers/Microsoft.Compute/virtualMachines/redis-server-withshake-target02"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "res-23",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": true,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/60a43a8b-348b-4e0f-a5d7-eff5f5f72125/resourceGroups/redis-shake-test-rg/providers/Microsoft.Network/networkInterfaces/redisshakevm878",
            "internal_domain_name_suffix": "pzakw2ciydhexj3hxivnwz4fzc.zqzx.internal.chinacloudapp.cn",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.2.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/60a43a8b-348b-4e0f-a5d7-eff5f5f72125/resourceGroups/redis-shake-test-rg/providers/Microsoft.Network/publicIPAddresses/redisshakevm-ip",
                "subnet_id": "/subscriptions/60a43a8b-348b-4e0f-a5d7-eff5f5f72125/resourceGroups/redis-shake-test-rg/providers/Microsoft.Network/virtualNetworks/redis-shake-test-rg-vnet/subnets/default"
              }
            ],
            "location": "chinanorth3",
            "mac_address": "00-17-FA-06-8D-59",
            "name": "redisshakevm878",
            "private_ip_address": "10.2.0.4",
            "private_ip_addresses": [
              "10.2.0.4"
            ],
            "resource_group_name": "redis-shake-test-rg",
            "timeouts": {
            },
            "virtual_machine_id": "/subscriptions/60a43a8b-348b-4e0f-a5d7-eff5f5f72125/resourceGroups/redis-shake-test-rg/providers/Microsoft.Compute/virtualMachines/redisshakevm"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "res-0",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/60a43a8b-348b-4e0f-a5d7-eff5f5f72125/resourceGroups/redis-shake-test-rg/providers/Microsoft.Network/networkSecurityGroups/redis-server-src-vm-nsg",
            "location": "chinanorth3",
            "name": "redis-server-src-vm-nsg",
            "resource_group_name": "redis-shake-test-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 300,
                "protocol": "TCP",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": {
              "create": null,
              "delete": null,
              "read": null,
              "update": null
            }
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "res-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/60a43a8b-348b-4e0f-a5d7-eff5f5f72125/resourceGroups/redis-shake-test-rg/providers/Microsoft.Network/networkSecurityGroups/redis-server-withshake-target02-nsg",
            "location": "chinanorth3",
            "name": "redis-server-withshake-target02-nsg",
            "resource_group_name": "redis-shake-test-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 300,
                "protocol": "TCP",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": {
              "create": null,
              "delete": null,
              "read": null,
              "update": null
            }
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "res-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/60a43a8b-348b-4e0f-a5d7-eff5f5f72125/resourceGroups/redis-shake-test-rg/providers/Microsoft.Network/networkSecurityGroups/redisshakevm-nsg",
            "location": "chinanorth3",
            "name": "redisshakevm-nsg",
            "resource_group_name": "redis-shake-test-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 300,
                "protocol": "TCP",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "6380",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowAnyCustom6380Inbound",
                "priority": 310,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": {
              "create": null,
              "delete": null,
              "read": null,
              "update": null
            }
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "res-14",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/60a43a8b-348b-4e0f-a5d7-eff5f5f72125/resourceGroups/redis-shake-test-rg/providers/Microsoft.Network/networkSecurityGroups/redis-server-src-vm-nsg/securityRules/SSH",
            "name": "SSH",
            "network_security_group_name": "redis-server-src-vm-nsg",
            "priority": 300,
            "protocol": "TCP",
            "resource_group_name": "redis-shake-test-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": {
              "create": null,
              "delete": null,
              "read": null,
              "update": null
            }
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "res-15",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/60a43a8b-348b-4e0f-a5d7-eff5f5f72125/resourceGroups/redis-shake-test-rg/providers/Microsoft.Network/networkSecurityGroups/redis-server-withshake-target02-nsg/securityRules/SSH",
            "name": "SSH",
            "network_security_group_name": "redis-server-withshake-target02-nsg",
            "priority": 300,
            "protocol": "TCP",
            "resource_group_name": "redis-shake-test-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": {
              "create": null,
              "delete": null,
              "read": null,
              "update": null
            }
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "res-16",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "6380",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/60a43a8b-348b-4e0f-a5d7-eff5f5f72125/resourceGroups/redis-shake-test-rg/providers/Microsoft.Network/networkSecurityGroups/redisshakevm-nsg/securityRules/AllowAnyCustom6380Inbound",
            "name": "AllowAnyCustom6380Inbound",
            "network_security_group_name": "redisshakevm-nsg",
            "priority": 310,
            "protocol": "*",
            "resource_group_name": "redis-shake-test-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": {
              "create": null,
              "delete": null,
              "read": null,
              "update": null
            }
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "res-17",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/60a43a8b-348b-4e0f-a5d7-eff5f5f72125/resourceGroups/redis-shake-test-rg/providers/Microsoft.Network/networkSecurityGroups/redisshakevm-nsg/securityRules/SSH",
            "name": "SSH",
            "network_security_group_name": "redisshakevm-nsg",
            "priority": 300,
            "protocol": "TCP",
            "resource_group_name": "redis-shake-test-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": {
              "create": null,
              "delete": null,
              "read": null,
              "update": null
            }
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "res-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/60a43a8b-348b-4e0f-a5d7-eff5f5f72125/resourceGroups/redis-shake-test-rg/providers/Microsoft.Network/publicIPAddresses/redis-server-src-vm-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "159.27.10.184",
            "ip_version": "IPv4",
            "location": "chinanorth3",
            "name": "redis-server-src-vm-ip",
            "resource_group_name": "redis-shake-test-rg",
            "sku": "Standard",
            "sku_tier": "Regional",
            "timeouts": {
            },
            "zones": [
              "1",
              "2",
              "3"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "res-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/60a43a8b-348b-4e0f-a5d7-eff5f5f72125/resourceGroups/redis-shake-test-rg/providers/Microsoft.Network/publicIPAddresses/redis-server-withshake-target02-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "163.228.224.133",
            "ip_version": "IPv4",
            "location": "chinanorth3",
            "name": "redis-server-withshake-target02-ip",
            "resource_group_name": "redis-shake-test-rg",
            "sku": "Standard",
            "sku_tier": "Regional",
            "timeouts": {
            },
            "zones": [
              "1",
              "2",
              "3"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "res-5",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/60a43a8b-348b-4e0f-a5d7-eff5f5f72125/resourceGroups/redis-shake-test-rg/providers/Microsoft.Network/publicIPAddresses/redisshakevm-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "163.228.224.242",
            "ip_version": "IPv4",
            "location": "chinanorth3",
            "name": "redisshakevm-ip",
            "resource_group_name": "redis-shake-test-rg",
            "sku": "Standard",
            "sku_tier": "Regional",
            "timeouts": {
            },
            "zones": [
              "1",
              "2",
              "3"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "res-6",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/60a43a8b-348b-4e0f-a5d7-eff5f5f72125/resourceGroups/redis-shake-test-rg/providers/Microsoft.Network/publicIPAddresses/redis-shake-vm-web-lb-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "159.27.14.123",
            "ip_version": "IPv4",
            "location": "chinanorth3",
            "name": "redis-shake-vm-web-lb-ip",
            "resource_group_name": "redis-shake-test-rg",
            "sku": "Standard",
            "sku_tier": "Regional",
            "timeouts": {
            },
            "zones": [
              "1",
              "2",
              "3"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "res-18",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.2.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/60a43a8b-348b-4e0f-a5d7-eff5f5f72125/resourceGroups/redis-shake-test-rg/providers/Microsoft.Network/virtualNetworks/redis-shake-test-rg-vnet/subnets/default",
            "name": "default",
            "resource_group_name": "redis-shake-test-rg",
            "timeouts": {
            },
            "virtual_network_name": "redis-shake-test-rg-vnet"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "res-7",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.2.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "70ab407e-c048-4bce-a7a7-ba2adb67c5ca",
            "id": "/subscriptions/60a43a8b-348b-4e0f-a5d7-eff5f5f72125/resourceGroups/redis-shake-test-rg/providers/Microsoft.Network/virtualNetworks/redis-shake-test-rg-vnet",
            "location": "chinanorth3",
            "name": "redis-shake-test-rg-vnet",
            "resource_group_name": "redis-shake-test-rg",
            "subnet": [
              {
                "address_prefix": "10.2.0.0/24",
                "id": "/subscriptions/60a43a8b-348b-4e0f-a5d7-eff5f5f72125/resourceGroups/redis-shake-test-rg/providers/Microsoft.Network/virtualNetworks/redis-shake-test-rg-vnet/subnets/default",
                "name": "default"
              }
            ],
            "timeouts": {
            }
          }
        }
      ]
    }
  ]
}